--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=demo
 server.port=8080
-spring.devtools.restart.enabled=true
 spring.mvc.servlet.path=/api
+csv.file=./ukpostcodes.csv
